Separated Spells & Timers, and added a new combo timer window

--- a/src/DPSMeter.xaml
+++ b/src/DPSMeter.xaml
@@ -36,8 +36,11 @@
                         <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="openmobinfo" ToolTip="Open Mob Info Window">
                             <Image Source="pack://application:,,,/toolbox.png"/>
                         </Button>
-                        <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="openspells" ToolTip="Open Spells/Trigger Window">
+                        <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="openspells" ToolTip="Open Spell Timer Window">
                             <Image Source="pack://application:,,,/wizard.png"/>
+                        </Button>
+                        <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="OpenTimers" ToolTip="Open Timer Window">
+                            <Image Source="pack://application:,,,/clock.png"/>
                         </Button>
                         <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="openmap" ToolTip="Open Map Window">
                             <Image Source="pack://application:,,,/map.png"/>
