--- a/src/TimerWindow.xaml
+++ b/src/TimerWindow.xaml
@@ -1,4 +1,4 @@
-﻿<local:BaseSaveStateWindow x:Class="EQTool.SpellWindow"
+﻿<local:BaseSaveStateWindow x:Class="EQTool.TimerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -37,9 +37,6 @@
                         </Button>
                         <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="opendps" ToolTip="Open DPS Window">
                             <Image Source="pack://application:,,,/dps.png"/>
-                        </Button>
-                        <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="OpenTimers" ToolTip="Open Timer Window">
-                            <Image Source="pack://application:,,,/clock.png"/>
                         </Button>
                         <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="openmap" ToolTip="Open Map Window">
                             <Image Source="pack://application:,,,/map.png"/>
@@ -93,7 +90,7 @@
                                                     <DockPanel HorizontalAlignment="{Binding HorizontalAlignment, RelativeSource={RelativeSource AncestorType=ContentPresenter}, Mode=OneWayToSource}">
                                                         <TextBlock Text="{Binding Name}" FontWeight="Bold" FontSize="{DynamicResource GlobalFontSize}"  />
                                                         <TextBlock Text="{Binding ItemCount}" FontSize="{DynamicResource GlobalFontSize}" FontWeight="Bold" Margin="10,0,0,0"  />
-                                                        <TextBlock Text=" effect(s)" FontSize="{DynamicResource GlobalFontSize}" />
+                                                        <TextBlock Text=" timer(s)" FontSize="{DynamicResource GlobalFontSize}" />
                                                         <Button Margin="0, 0, 6, 0" HorizontalAlignment="Right" DockPanel.Dock="Right" Width="14" Height="14" Click="RemoveFromSpells" ToolTip="Remove from list">
                                                             <Image Source="pack://application:,,,/Trash.png"/>
                                                         </Button>
