--- a/src/ComboTimerWindow.xaml
+++ b/src/ComboTimerWindow.xaml
@@ -38,6 +38,9 @@
                         <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="opendps" ToolTip="Open DPS Window">
                             <Image Source="pack://application:,,,/dps.png"/>
                         </Button>
+                        <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="openspells" ToolTip="Open Spell Timer Window">
+                            <Image Source="pack://application:,,,/hat.png"/>
+                        </Button>
                         <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="OpenTimers" ToolTip="Open Timer Window">
                             <Image Source="pack://application:,,,/clock.png"/>
                         </Button>
