--- a/src/MobInfo.xaml
+++ b/src/MobInfo.xaml
@@ -33,10 +33,13 @@
                     <TextBlock Foreground="White" FontWeight="Bold" VerticalAlignment="Center" Margin="10,1,10,1" Text="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}, Path=Title}"/>
                     <StackPanel Orientation="Horizontal"  HorizontalAlignment="Center">
                         <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="openspells" ToolTip="Open Spell Timer Window">
-                            <Image Source="pack://application:,,,/wizard.png"/>
+                            <Image Source="pack://application:,,,/hat.png"/>
                         </Button>
                         <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="OpenTimers" ToolTip="Open Timer Window">
                             <Image Source="pack://application:,,,/clock.png"/>
+                        </Button>
+                        <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="OpenComboTimers" ToolTip="Open Combo Timer Window">
+                            <Image Source="pack://application:,,,/combo.png"/>
                         </Button>
                         <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="opendps" ToolTip="Open DPS Window">
                             <Image Source="pack://application:,,,/dps.png"/>
