--- a/src/SpellWindow.xaml
+++ b/src/SpellWindow.xaml
@@ -41,6 +41,9 @@
                         <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="OpenTimers" ToolTip="Open Timer Window">
                             <Image Source="pack://application:,,,/clock.png"/>
                         </Button>
+                        <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="OpenComboTimers" ToolTip="Open Combo Timer Window">
+                            <Image Source="pack://application:,,,/combo.png"/>
+                        </Button>
                         <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="openmap" ToolTip="Open Map Window">
                             <Image Source="pack://application:,,,/map.png"/>
                         </Button>
