--- a/src/MappingWindow.xaml
+++ b/src/MappingWindow.xaml
@@ -28,8 +28,12 @@
                 <RowDefinition Height="20" />
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Grid Grid.Row="1" Name="MapWrapper" MouseMove="PanAndZoomCanvas_MouseMove" MouseDown="Map_PanAndZoomCanvas_MouseDownEvent" MouseUp="PanAndZoomCanvas_MouseUp" MouseWheel="PanAndZoomCanvas_MouseWheel" Background="Transparent"> 
-                <Viewbox Stretch="Uniform">
+            <Grid Grid.Row="1" Name="MapWrapper" MouseMove="PanAndZoomCanvas_MouseMove" MouseDown="Map_PanAndZoomCanvas_MouseDownEvent" MouseUp="PanAndZoomCanvas_MouseUp" MouseWheel="PanAndZoomCanvas_MouseWheel" Background="Transparent">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="437*"/>
+                    <ColumnDefinition Width="201*"/>
+                </Grid.ColumnDefinitions>
+                <Viewbox Stretch="Uniform" Grid.ColumnSpan="2">
                     <local:PanAndZoomCanvas x:Name="Map" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
                 </Viewbox>
                 <ListView HorizontalAlignment="Left" VerticalAlignment="Top" ItemsSource="{Binding Players}" Background="Transparent">
@@ -37,43 +41,63 @@
                         <DataTemplate>
                             <StackPanel HorizontalAlignment="Stretch" Orientation="Horizontal">
                                 <StackPanel MinWidth="20" MinHeight="20" Background="{Binding Color}" Margin="0, 0, 4, 0"></StackPanel>
-                                <TextBlock Text="{Binding Name}" Foreground="White" /> 
+                                <TextBlock Text="{Binding Name}" Foreground="White" />
                             </StackPanel>
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
+                <TextBlock Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" 
+                    Foreground="White" Margin="0,0,5,1" Text="{Binding MouseLocation}"
+                    Visibility="{Binding ShowMouseLocation}"/>
+
             </Grid>
-          
+
             <Border Background="{StaticResource WindowFrameBrush}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" CornerRadius="5,5,0,0" Margin="-1,0,-1,0" MouseLeftButtonDown="DragWindow"  Grid.Row="0">
                 <Grid>
-                    <TextBlock Foreground="White" FontWeight="Bold" VerticalAlignment="Center" Margin="10,1,10,1" Text="{Binding Title}"/>
-                    <StackPanel Orientation="Horizontal"  HorizontalAlignment="Center">
-                        <!--<Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="toggleCenterOnyou" ToolTip="Open Mob Info Window">
-                            <Image Source="pack://application:,,,/toolbox.png"/>
-                        </Button>-->
-                        <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="openmobinfo" ToolTip="Open Mob Info Window">
-                            <Image Source="pack://application:,,,/toolbox.png"/>
-                        </Button>
-                        <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="openspells" ToolTip="Open Spell Timer Window">
-                            <Image Source="pack://application:,,,/hat.png"/>
-                        </Button>
-                        <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="OpenTimers" ToolTip="Open Timer Window">
-                            <Image Source="pack://application:,,,/clock.png"/>
-                        </Button>
-                        <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="OpenComboTimers" ToolTip="Open Combo Timer Window">
-                            <Image Source="pack://application:,,,/combo.png"/>
-                        </Button>
-                        <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="opendps" ToolTip="Open DPS Window">
-                            <Image Source="pack://application:,,,/dps.png"/>
-                        </Button>
-                        <Button Content="O" Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="opensettings" ToolTip="Open Settings Window" />
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal"  HorizontalAlignment="Right">
-                        <TextBlock Foreground="White" FontWeight="Bold" VerticalAlignment="Center" Margin="10,1,10,1" Text="{Binding MouseLocation}"/>
-                        <Button Content="_" Margin="1" FontSize="7" Width="10" Height="10" Padding="0" Click="MinimizeWindow"/>
-                        <Button Content="&#xF04B;" Margin="1" FontSize="7" Width="10" Height="10" Padding="0" Click="MaximizeWindow"/>
-                        <Button Content="X" Margin="1" FontSize="7" Width="10" Height="10" Padding="0" Click="CloseWindow" />
-                    </StackPanel>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="40*"/>
+                        <ColumnDefinition Width="35*" MinWidth="96"/>
+                        <ColumnDefinition Width="5*" MinWidth="32"/>
+                        <ColumnDefinition Width="10*" MinWidth="56"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" Foreground="White" FontWeight="Bold" 
+                        VerticalAlignment="Center" Margin="10,0,10,0" Text="{Binding Title}" Height="16"/>
+                    <Border Grid.Column="1" Margin="0,0,0,0">
+                        <StackPanel Orientation="Horizontal"  HorizontalAlignment="Left" Width="96">
+                            <!--<Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="toggleCenterOnyou" ToolTip="Open Mob Info Window">
+                                <Image Source="pack://application:,,,/toolbox.png"/>
+                            </Button>-->
+                            <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="openmobinfo" ToolTip="Open Mob Info Window">
+                                <Image Source="pack://application:,,,/toolbox.png"/>
+                            </Button>
+                            <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="openspells" ToolTip="Open Spell Timer Window">
+                                <Image Source="pack://application:,,,/hat.png"/>
+                            </Button>
+                            <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="OpenTimers" ToolTip="Open Timer Window">
+                                <Image Source="pack://application:,,,/clock.png"/>
+                            </Button>
+                            <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="OpenComboTimers" ToolTip="Open Combo Timer Window">
+                                <Image Source="pack://application:,,,/combo.png"/>
+                            </Button>
+                            <Button Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="opendps" ToolTip="Open DPS Window">
+                                <Image Source="pack://application:,,,/dps.png"/>
+                            </Button>
+                            <Button Content="O" Margin="1" FontSize="7" Width="14" Height="14" Padding="0" Click="opensettings" ToolTip="Open Settings Window" />
+                        </StackPanel>
+                    </Border>
+                    <Border Grid.Column="2">
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                            <Button Content="Lock" FontSize="12" Width="32" Height="16" Padding="0" Click="toggleCenterOnyou" ToolTip="Locks map to Your position"/>
+                        </StackPanel>
+                    </Border>
+                    <Border Grid.Column="3">
+                        <StackPanel Orientation="Horizontal"  HorizontalAlignment="Right" Width="56">
+                            <!--<TextBlock Foreground="White" FontWeight="Bold" VerticalAlignment="Center" Margin="10,1,10,1" Text="{Binding MouseLocation}"/>-->
+                            <Button Content="_" Margin="1" FontSize="7" Width="10" Height="10" Padding="0" Click="MinimizeWindow"/>
+                            <Button Content="&#xF04B;" Margin="1" FontSize="7" Width="10" Height="10" Padding="0" Click="MaximizeWindow"/>
+                            <Button Content="X" Margin="1" FontSize="7" Width="10" Height="10" Padding="0" Click="CloseWindow" />
+                        </StackPanel>
+                    </Border>
                 </Grid>
             </Border>
         </Grid>
