--- a/src/Settings.xaml
+++ b/src/Settings.xaml
@@ -297,7 +297,7 @@
 
             </StackPanel>
         </TabItem>
-        <TabItem Header="Triggers">
+        <TabItem Header="Timers">
             <StackPanel Orientation="Vertical" Margin="5, 5, 5, 5">
                 <StackPanel Orientation="Vertical"  Margin="0, 0, 0, 8">
                     <StackPanel Orientation="Horizontal">
